--- a/Ad Extension/manifest.json
+++ b/Ad Extension/manifest.json
@@ -6,8 +6,9 @@
   "author": "Lucas Ausberger",
 
   "background": {
-    "service_worker": "adCollector.js"
+    "service_worker": "background.js"
   },
+
 
   "permissions": [
     "scripting",
@@ -18,7 +19,8 @@
     "default_icon": {
       "16": "icons/dl16.png",
       "32": "icons/dl32.png"
-    }
+    },
+    "default_title": "Save Image URLS"
   }
 }
 
